update by paull

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
                 <a href="home.html" class="hover:text-gray-300">Home</a>
                 <a href="portofolio.html" class="hover:text-gray-300">Portfolio</a>
                 <a href="catalog.html" class="hover:text-gray-300">Catalog</a>
+                <a href="contact.html" class="hover:text-gray-300">Contact</a>
             </nav>
         </div>
     </header>
